--- a/templates/custom-code/add.custom.code.html
+++ b/templates/custom-code/add.custom.code.html
@@ -51,7 +51,6 @@
                             </div>
                         </div>
                         <uib-accordion class="side-navbar">
-
                             <!-- SECTION: Module -->
                             <div uib-accordion-group is-open="leftMenu.moduleId.open" class="panel-container summary-box" is-disabled="!validator.moduleId.completed">
                                 <uib-accordion-heading>
@@ -74,7 +73,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <div uib-accordion-group is-open="leftMenu.details.open" class="panel-container summary-box" is-disabled="!validator.details.completed">
+                            <!-- SECTION: Details -->
+                            <div uib-accordion-group is-open="leftMenu.details.open" class="panel-container summary-box" is-disabled="!validator.details.completed" ng-if="validator.moduleId.completed">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
                                         <div class="col-md-2">
@@ -99,9 +99,9 @@
                             </div>
                         </uib-accordion>
                         <!-- Submit button -->
-                        <div class="panel-container">
-                            <a href="" ng-click="submitDiagnosisTranslation()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}"
-                               ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" ng-if="checkForm()" style="width: 100%;">
+                        <div class="panel-container" ng-if="formReady">
+                            <a href="" ng-click="submitCustomCode()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}"
+                               ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" style="width: 100%;">
 								<span style="font-size: 20px;">
 									<strong>{{'CUSTOM_CODE.ADD.SUBMIT'|translate}}</strong>
 								</span>
@@ -143,7 +143,7 @@
                         <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6">
                             <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
                                 <span style="padding: 0 10px;">
-                                    <h2>{{'CUSTOM_CODE.ADD.STEP'|translate}} {{numOfCompletedSteps}} {{'CUSTOM_CODE.ADD.OF'|translate}} {{stepTotal}} {{'CUSTOM_CODE.ADD.COMPLETED'|translate}}</h2>
+                                    <h2>{{'CUSTOM_CODE.ADD.STEP'|translate}} {{completedSteps}} {{'CUSTOM_CODE.ADD.OF'|translate}} {{stepTotal}} {{'CUSTOM_CODE.ADD.COMPLETED'|translate}}</h2>
                                 </span>
                             </div>
                             <div class="progress progress-striped active">
@@ -151,10 +151,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel-container" ng-if="formReady">
-                            <a href="" ng-click="submitCustomCode()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" ng-if="checkForm()" style="width: 100%;">
-                                <span style="font-size: 20px;"><strong>{{'CUSTOM_CODE.ADD.SUBMIT'|translate}}</strong></span>
-                            </a>
+                        <div class="mobile-summary col-xs-12 col-sm-offset-2 col-sm-5" ng-if="formReady">
+                            <div class="panel-container">
+                                <a href="" ng-click="submitCustomCode()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" style="width: 100%;">
+                                    <span style="font-size: 20px;"><strong>{{'CUSTOM_CODE.ADD.SUBMIT'|translate}}</strong></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
 
@@ -189,49 +191,48 @@
                                 </div>
                             </div>
                         </div>
-
-
-
                         <!-- SECTION: Code & Description -->
-                        <div class="row">
-                            <div class="col-xs-12 side-menu-title">
-                                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                        <div ng-if="validator.moduleId.completed">
+                            <div class="row">
+                                <div class="col-xs-12 side-menu-title">
+                                    <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                                     <span style="background-color:#e6edfa; padding: 0 10px;">
                                         <span class="fas fa-dot-circle"></span><h2>{{'CUSTOM_CODE.ADD.CUSTOM_CODE'|translate}}</h2>
                                     </span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <p style="margin-bottom: 5px;">
-                                    <span style="color:#d9534f"><strong>{{'CUSTOM_CODE.ADD.REQUIRED'|translate}}</strong></span>
-                                    {{'CUSTOM_CODE.ADD.CUSTOM_CODE_EXPLANATION'|translate}}
-                                </p>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p style="margin-bottom: 5px;">
+                                        <span style="color:#d9534f"><strong>{{'CUSTOM_CODE.ADD.REQUIRED'|translate}}</strong></span>
+                                        {{'CUSTOM_CODE.ADD.CUSTOM_CODE_EXPLANATION'|translate}}
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12 col-md-6">
-                                <div class="panel" ng-class="(toSubmit.details.code && toSubmit.details.description) ? 'panel-success': 'panel-danger'">
-                                    <div class="panel-heading"><strong>{{'CUSTOM_CODE.ADD.DETAILS'|translate}}</strong>
-                                        <span ng-hide="toSubmit.details.code && toSubmit.details.description" style="float:right"><em>{{'CUSTOM_CODE.ADD.INCOMPLETE'|translate}}</em></span>
-                                        <span ng-show="toSubmit.details.code && toSubmit.details.description" style="float:right"><em>{{'CUSTOM_CODE.ADD.COMPLETE'|translate}}</em></span>
-                                    </div>
-                                    <div class="panel-body form-horizontal">
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-lg-2">
-                                                {{'CUSTOM_CODE.ADD.CODE'|translate}}
-                                            </label>
-                                            <div class="col-xs-12 col-lg-10">
-                                                <textarea class="form-control" rows="2" ng-model="toSubmit.details.code" ng-change="detailsUpdate()"></textarea>
-                                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-md-6">
+                                    <div class="panel" ng-class="(toSubmit.details.code && toSubmit.details.description) ? 'panel-success': 'panel-danger'">
+                                        <div class="panel-heading"><strong>{{'CUSTOM_CODE.ADD.DETAILS'|translate}}</strong>
+                                            <span ng-hide="toSubmit.details.code && toSubmit.details.description" style="float:right"><em>{{'CUSTOM_CODE.ADD.INCOMPLETE'|translate}}</em></span>
+                                            <span ng-show="toSubmit.details.code && toSubmit.details.description" style="float:right"><em>{{'CUSTOM_CODE.ADD.COMPLETE'|translate}}</em></span>
                                         </div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-lg-2">
-                                                {{'CUSTOM_CODE.ADD.DESCRIPTION'|translate}}
-                                            </label>
-                                            <div class="col-xs-12 col-lg-10">
-                                                <textarea class="form-control" rows="2" ng-model="toSubmit.details.description" ng-change="detailsUpdate()"></textarea>
+                                        <div class="panel-body form-horizontal">
+                                            <div class="form-group">
+                                                <label class="control-label col-xs-12 col-lg-2">
+                                                    {{'CUSTOM_CODE.ADD.CODE'|translate}}
+                                                </label>
+                                                <div class="col-xs-12 col-lg-10">
+                                                    <textarea class="form-control" rows="2" ng-model="toSubmit.details.code" ng-change="detailsUpdate()"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="control-label col-xs-12 col-lg-2">
+                                                    {{'CUSTOM_CODE.ADD.DESCRIPTION'|translate}}
+                                                </label>
+                                                <div class="col-xs-12 col-lg-10">
+                                                    <textarea class="form-control" rows="2" ng-model="toSubmit.details.description" ng-change="detailsUpdate()"></textarea>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
