--- a/templates/custom-code/delete.custom.code.html
+++ b/templates/custom-code/delete.custom.code.html
@@ -2,25 +2,24 @@
     <div class="col-xs-12">
         <h2 class="modal-title">
             <span class="glyphicon glyphicon-trash"></span>
-            {{'DIAGNOSIS.DELETE.TITLE'|translate}}
+            {{'CUSTOM_CODE.DELETE.TITLE'|translate}}
         </h2>
     </div>
 </div>
 <div class="modal-body">
     <div class="alert alert-danger" role="alert">
-        <p><b>{{'DIAGNOSIS.DELETE.WARNING'|translate}}</b> {{'DIAGNOSIS.DELETE.WARNING_TEXT'|translate}}</p>
+        <p><b>{{'CUSTOM_CODE.DELETE.WARNING'|translate}}</b> {{'CUSTOM_CODE.DELETE.WARNING_TEXT'|translate}}</p>
     </div>
     <div class="alert row">
         <div class="col-xs-12">
-            <p ng-bind-html="diagnosisTranslationToDelete.name_EN"></p>
-            <p ng-bind-html="diagnosisTranslationToDelete.name_FR"></p>
+            <p ng-bind-html="customCodeToDelete.code + ' - ' + customCodeToDelete.description"></p>
         </div>
     </div>
     <div class="row">
         <div class="modal-buttons col-xs-12">
-            <form method="post" ng-submit="deleteDiagnosisTranslation()">
-                <input class="btn btn-primary submit" type="submit" value="{{'DIAGNOSIS.DELETE.DELETE'|translate}}">
-                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'DIAGNOSIS.DELETE.CANCEL'|translate}}">
+            <form method="post" ng-submit="deleteCustomCode()">
+                <input class="btn btn-primary submit" type="submit" value="{{'CUSTOM_CODE.DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'CUSTOM_CODE.DELETE.CANCEL'|translate}}">
             </form>
         </div>
     </div>
