--- a/templates/custom-code/edit.custom.code.html
+++ b/templates/custom-code/edit.custom.code.html
@@ -3,154 +3,55 @@
     <div class="col-xs-12 col-md-6">
         <h2 class="modal-title">
             <span class="glyphicon glyphicon-pencil"></span>
-            {{'DIAGNOSIS.EDIT.TITLE'|translate}}
+            {{'CUSTOM_CODE.EDIT.TITLE'|translate}}
         </h2>
+        <p ng-if="locked" class="text-danger">{{'CUSTOM_CODE.EDIT.LOCKED'|translate}}</p>
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
-        <form method="post" ng-submit="updateDiagnosisTranslation()">
-            <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="{{'DIAGNOSIS.EDIT.SAVE'|translate}}">
-            <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'DIAGNOSIS.EDIT.CANCEL'|translate}}">
+        <form method="post" ng-submit="updateCustomCode()">
+            <input ng-if="!locked" class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !changesDetected)}" type="submit" value="{{'CUSTOM_CODE.EDIT.SAVE'|translate}}">
+            <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'CUSTOM_CODE.EDIT.CANCEL'|translate}}">
         </form>
     </div>
 </div>
 <div class="modal-body">
     <uib-accordion close-others="false">
-        <!-- SECTION: Diagnosis names -->
-        <div uib-accordion-group is-open="diagnosisSection.open">
+        <!-- SECTION: General infos -->
+        <div uib-accordion-group is-open="generalSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'DIAGNOSIS.EDIT.DIAGNOSES'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisSection.open, 'glyphicon-chevron-right': !diagnosisSection.open}"></i>
+                    <strong>{{'CUSTOM_CODE.EDIT.GENERAL'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': generalSection.open, 'glyphicon-chevron-right': !generalSection.open}"></i>
                 </div>
             </uib-accordion-heading>
-            <div class="alert alert-info" role="alert">
-                <strong>{{'DIAGNOSIS.EDIT.CURRENT_DIAGNOSES'|translate}}</strong><br>
-                <p>
-                <ul class="list-items">
-                    <li ng-repeat="selectedDiagnosis in diagnosisList | filter: {added: 1, assigned: null}">
-                        {{selectedDiagnosis.name}}
-                    </li>
-                </ul>
-                </p>
-            </div>
-            <div class="list-space">
-                <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                    <input class="form-control" type="text" ng-model="diagnosisFilter" ng-change="changeDiagnosisFilter(diagnosisFilter)" placeholder="{{'DIAGNOSIS.EDIT.SEARCH'|translate}}"/>
+            <div class="row">
+                <div class="col-xs-12">
+                    <label><strong>{{'CUSTOM_CODE.EDIT.MODULE'|translate}}</strong></label> : {{generalInfo.module_display}}
                 </div>
-                <div style="padding: 10px;">
-                    <label>
-                        <input type="checkbox" ng-click="selectAllFilteredDiagnoses()" ng-checked="selectAll"> {{'DIAGNOSIS.EDIT.SELECT_ALL'|translate}}
-                    </label>
+                <div ng-if="generalInfo.type_display" class="col-xs-12">
+                    <label><strong>{{'CUSTOM_CODE.EDIT.TYPE'|translate}}</strong></label> : {{generalInfo.type_display}}
                 </div>
-                <div class="btn-group btn-group-justified">
-                    <a class="btn btn-default" ng-class="{'active' : diagnosisCodeFilter == 'all'}" ng-click="setDiagnosisCodeFilter('all')">{{'DIAGNOSIS.EDIT.SHOW_ALL'|translate}}</a>
-                    <a class="btn btn-default" ng-class="{'active' : diagnosisCodeFilter == 'current'}" ng-click="setDiagnosisCodeFilter('current')">{{'DIAGNOSIS.EDIT.ASSIGN_TO_THIS'|translate}}</a>
-                    <a class="btn btn-default" ng-class="{'active' : diagnosisCodeFilter == 'other'}" ng-click="setDiagnosisCodeFilter('other')">{{'DIAGNOSIS.EDIT.ASSIGN_OTHERS'|translate}}</a>
-                    <a class="btn btn-default" ng-class="{'active' : diagnosisCodeFilter == 'none'}" ng-click="setDiagnosisCodeFilter('none')">{{'DIAGNOSIS.EDIT.UNASSIGNED'|translate}}</a>
-                </div>
-                <ul class="list-items">
-                    <li ng-repeat="diagnosis in diagnosisList | filter: searchDiagnosesFilter">
-                        <label ng-class="{greenText: diagnosis.added, grayText: diagnosis.assigned && !diagnosis.added}">
-                            <input type="checkbox" ng-click="toggleDiagnosisSelection(diagnosis)" ng-checked="diagnosis.added" /> {{diagnosis.name}}
-                            <span ng-class="{redText: diagnosis.assigned && !diagnosis.added}" ng-if="diagnosis.assigned && !diagnosis.added"><em> --- {{'DIAGNOSIS.EDIT.ASSIGN_TO'|translate}} {{diagnosis.assigned.name_display}}</em></span>
-                            <span ng-class="{redText: diagnosis.assigned}" ng-if="diagnosis.assigned && diagnosis.added"><em> --- {{'DIAGNOSIS.EDIT.WILL_REPLACE'|translate}} {{diagnosis.assigned.name_display}}</em></span>
-                        </label>
-                    </li>
-                </ul>
             </div>
         </div>
-
         <!-- SECTION: Titles -->
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'DIAGNOSIS.EDIT.TITLES'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                    <strong>{{'CUSTOM_CODE.EDIT.DETAILS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'DIAGNOSIS.EDIT.ENGLISH_ABRV'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="diagnosisTranslation.name_EN" ng-change="detailsUpdated()" placeholder="{{'DIAGNOSIS.EDIT.ENGLISH_TITLE'|translate}}" required="required">
+                        <span class="input-group-addon">{{'CUSTOM_CODE.EDIT.CODE'|translate}}</span>
+                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.code" ng-change="detailsUpdate()" required="required" />
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'DIAGNOSIS.EDIT.FRENCH_ABRV'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="diagnosisTranslation.name_FR" ng-change="detailsUpdated()" placeholder="{{'DIAGNOSIS.EDIT.FRENCH_TITLE'|translate}}" required="required">
+                        <span class="input-group-addon">{{'CUSTOM_CODE.EDIT.DESCRIPTION'|translate}}</span>
+                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.description" ng-change="detailsUpdate()" required="required" />
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <!-- SECTION: Description -->
-        <div uib-accordion-group is-open="descriptionSection.open">
-            <uib-accordion-heading>
-                <div>
-                    <strong>{{'DIAGNOSIS.EDIT.DESCRIPTIONS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
-                </div>
-            </uib-accordion-heading>
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">{{'DIAGNOSIS.EDIT.HTML_ENGLISH'|translate}}</span>
-                    </div>
-                    <div class="input-group">
-                        <div text-angular ng-model="diagnosisTranslation.description_EN" ng-change="detailsUpdated()" placeholder="{{'DIAGNOSIS.EDIT.ENGLISH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar"></div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">{{'DIAGNOSIS.EDIT.HTML_FRENCH'|translate}}</span>
-                    </div>
-                    <div class="input-group">
-                        <div text-angular ng-model="diagnosisTranslation.description_FR" ng-change="detailsUpdated()" placeholder="{{'DIAGNOSIS.EDIT.FRENCH_DESCRIPTION'|translate}}" required="required" ta-toolbar="toolbar"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- SECTION: Educational material -->
-        <div uib-accordion-group is-open="educationalMaterialSection.open">
-            <uib-accordion-heading>
-                <div>
-                    <strong>{{'DIAGNOSIS.EDIT.ATTACHED_EDUCATION'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': educationalMaterialSection.open, 'glyphicon-chevron-right': !educationalMaterialSection.open}"></i>
-                </div>
-            </uib-accordion-heading>
-            <div class="alert alert-info" role="alert">
-                <strong>{{'DIAGNOSIS.EDIT.CURRENT_EDUCATION'|translate}}</strong><br>
-                <div>
-                    <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                    <span ng-if="diagnosisTranslation.eduMat">
-                        <span ng-if="diagnosisTranslation.eduMat.tocs.length">
-                            <span style="cursor:pointer" ng-click="toggleTOCDisplay()">
-                                <strong>{{diagnosisTranslation.eduMat.name_display}}</strong>
-                            </span>
-                            <ul ng-if="showTOCs">
-                                <li ng-repeat="toc in diagnosisTranslation.eduMat.tocs">
-                                    <strong><a target="_blank" href="{{toc.url_display}}">{{toc.name_display}}</a></strong>
-                                </li>
-                            </ul>
-                        </span>
-                        <span ng-if="!diagnosisTranslation.eduMat.tocs.length">
-                            <strong><a target="_blank" href="{{diagnosisTranslation.eduMat.url_display}}">{{diagnosisTranslation.eduMat.name_display}}</a>
-                        </span>
-		            </span>
-                    <span ng-if="!diagnosisTranslation.eduMat">{{'DIAGNOSIS.EDIT.NONE'|translate}}</span>
-                </div>
-            </div>
-            <div class="list-space">
-                <div class="input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                    <input class="form-control" type="text" ng-model="eduMatFilter" ng-change="changeEduMatFilter(eduMatFilter)" placeholder="{{'DIAGNOSIS.EDIT.SEARCH'|translate}}"/>
-                </div>
-                <ul class="list-items">
-                    <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
-                        <label>
-                            <input type="radio" ng-model="diagnosisTranslation.eduMatSer" ng-click="eduMatUpdate($event, eduMat)" value="{{eduMat.serial}}" /> {{eduMat.name_display}}
-                        </label>
-                    </li>
-                </ul>
             </div>
         </div>
     </uib-accordion>
