OPAL-206 - fixed numerous bugs with PHP 7.

--- a/templates/publication/edit.publication.html
+++ b/templates/publication/edit.publication.html
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
         <span>
-            <form method="post" ng-submit="updatePublishedQuestionnaire()">
+            <form method="post" ng-submit="updatePublication()">
                 <input class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !changesDetected)}" type="submit" value="{{'PUBLICATION.EDIT.SAVE'|translate}}">
                 <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'PUBLICATION.EDIT.CANCEL'|translate}}">
             </form>
