adding missing files

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -162,6 +162,8 @@
 							</div>
 						</div>
 
+
+
 						<!-- SECTION: Questionnaires -->
 						<div class="col-xs-12 col-sm-6">
 							<div class="panel-container animated" ng-class="{pulse: hoverPublicationMenu}" ng-mouseenter="hoverPublicationMenu=true" ng-mouseleave="hoverPublicationMenu=false" style="cursor:pointer;" ng-click="goToPublication()">
@@ -232,6 +234,25 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="panel-container animated" ng-class="{pulse: hoverDiagnosisMenu}" ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false" style="cursor:pointer;" ng-click="goToAuditReport()">
+								<div class="panel-info" >
+									<div class="panel-content">
+										<div class="icon-home clearfix">
+											<span class="fa fa-stethoscope fa-sm" aria-hidden="true"></span>
+										</div>
+										<div class="panel-title">
+											<h1>Audit report</h1>
+										</div>
+										<div class="panel-description">
+											<p>Report for auditing</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
 
 						<!-- SECTION: Cron control -->
 						<div class="col-xs-12 col-sm-6" ng-if="isAuthorized([userRoles.admin])">
@@ -389,6 +410,6 @@
 </div>
 
 
-          
-                      
-                    
+
+
+
