--- a/templates/user/add.user.html
+++ b/templates/user/add.user.html
@@ -218,10 +218,11 @@
                                         </div>
                                         <div class="form-group has-feedback" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}">
                                             <label class="control-label col-xs-12 col-md-2">
-                                                {{'USERS.ADD.PASSWORD'|translate}} <br><em><small>{{'USERS.ADD.MIN'|translate}}</small></em>
+                                                {{'USERS.ADD.PASSWORD'|translate}}
                                             </label>
                                             <div class="col-xs-12 col-md-7">
                                                 <input type="password" class="form-control" required="required" ng-blur="validatePassword(newUser.password)" ng-change="passwordUpdate()" ng-model="newUser.password">
+                                                <p style="margin-bottom: 0;"><em><small>{{'USERS.ADD.PASSWORD_REQUIREMENTS'|translate}}</small></em></p>
                                                 <span ng-show="validPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validPassword.status == 'valid', 'glyphicon-remove': validPassword.status == 'invalid', 'glyphicon-warning-sign': validPassword.status == 'warning'}" aria-hidden="true"></span>
                                             </div>
                                             <em class="control-label col-xs-12 col-md-3" ng-show="validPassword.status == 'invalid' || validPassword.status == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
