--- a/templates/user/edit.user.html
+++ b/templates/user/edit.user.html
@@ -66,7 +66,7 @@
                 <div class="col-xs-12 col-sm-10">
                     <div class="row">
                         <div class="col-sm-6">
-                            <select ng-model="user.role.serial" ng-change="roleUpdate()" ng-options="role.serial as role.name_display for role in roles" class="form-control">
+                            <select ng-disabled="roleDisabled"  ng-model="user.role.serial" ng-change="roleUpdate()" ng-options="role.serial as role.name_display for role in roles" class="form-control">
                                 <option ng-hide="user.role" value="">{{'USERS.EDIT.SELECT_ROLE'|translate}}</option>
                             </select>
                         </div>
