--- a/templates/custom-code/custom.codes.html
+++ b/templates/custom-code/custom.codes.html
@@ -11,7 +11,7 @@
                     <div class="row main-title">
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-9 title-content">
-                            <span class="glyphicon glyphicon-cloud"></span>
+                            <span class="fa fa-exchange"></span>
                             <h1><strong>{{'CUSTOM_CODE.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
