--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -218,6 +218,22 @@
                 </div>
             </div>
 
+            <!-- SECTION: Studies -->
+            <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+                <div class="panel-container animated"
+                     ng-class="{pulse: hoverDiagnosisMenu, active: currentPage == 'study'}"
+                     ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false"
+                     style="cursor:pointer;" ng-click="goToStudies()">
+                    <div class="side-panel-info-sm" ng-class="{active: currentPage == 'study'}">
+                        <div class="panel-content">
+                            <span style="font-size: 21px; vertical-align:middle" class="fa fa-pie-chart"
+                                  aria-hidden="true"></span>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.STUDIES'|translate}}</strong></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- SECTION: Cron Logs -->
             <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                 <div class="panel-container animated" ng-class="{pulse: hoverCronMenu, active: currentPage == 'cron'}"
