--- a/templates/study/add.study.html
+++ b/templates/study/add.study.html
@@ -99,13 +99,13 @@
                                 </div>
                             </div>
                             <!-- SECTION: Dates -->
-                            <div uib-accordion-group is-open="toSubmit.dates.start_date || toSubmit.dates.end_date" class="panel-container summary-box " ng-class="{fadeIn:leftMenu.publishFrequency.display}" ng-if="toSubmit.dates.start_date || toSubmit.dates.end_date" is-disabled="!toSubmit.dates.start_date && !toSubmit.dates.end_date">
+                            <div uib-accordion-group is-open="leftMenu.dates.open" class="panel-container summary-box " ng-class="{fadeIn:leftMenu.dates.display}" ng-if="toSubmit.dates.start_date || toSubmit.dates.end_date" is-disabled="!toSubmit.dates.start_date && !toSubmit.dates.end_date">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
-                                        <div class="col-md-2"><span ng-if="validator.dates.completed" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span></div>
+                                        <div class="col-md-2"><span ng-if="toSubmit.dates.start_date || toSubmit.dates.end_date" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span></div>
                                         <div class="col-md-8"><strong>{{'STUDY.ADD.DATES'|translate}}</strong></div>
                                         <div class="col-md-2">
-                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': leftMenu.publishFrequency.open, 'glyphicon-chevron-right': !leftMenu.publishFrequency.open}" ng-if="showFrequency"></i>
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': leftMenu.dates.open, 'glyphicon-chevron-right': !leftMenu.dates.open}" ng-if="leftMenu.dates.display"></i>
                                         </div>
                                     </div>
                                 </uib-accordion-heading>
@@ -114,7 +114,7 @@
                                         <strong>{{'STUDY.ADD.START_DATE'|translate}}</strong><br>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         <span ng-if="toSubmit.dates.start_date">{{toSubmit.dates.start_date|date:'yyyy-MM-dd'}}</span>
-<!--                                        <span ng-if="!toSubmit.dates.start_date">{{'STUDY.ADD.NA'|translate}}</span>-->
+                                        <span ng-if="!toSubmit.dates.start_date">{{'STUDY.ADD.NA'|translate}}</span>
                                     </p>
                                 </div>
                                 <div class="description">
@@ -122,7 +122,7 @@
                                         <strong>{{'STUDY.ADD.END_DATE'|translate}}</strong><br>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         <span ng-if="toSubmit.dates.end_date">{{toSubmit.dates.end_date | date: 'yyyy-MM-dd' }}</span>
-<!--                                        <span ng-if="!toSubmit.dates.end_date">{{'STUDY.ADD.NA'|translate}}</span>-->
+                                        <span ng-if="!toSubmit.dates.end_date">{{'STUDY.ADD.NA'|translate}}</span>
                                     </p>
                                 </div>
                             </div>
