--- a/templates/study/delete.study.html
+++ b/templates/study/delete.study.html
@@ -2,24 +2,24 @@
     <div class="col-xs-12">
         <h2 class="modal-title">
             <span class="glyphicon glyphicon-trash"></span>
-            {{'CUSTOM_CODE.DELETE.TITLE'|translate}}
+            {{'STUDY.DELETE.TITLE'|translate}}
         </h2>
     </div>
 </div>
 <div class="modal-body">
     <div class="alert alert-danger" role="alert">
-        <p><b>{{'CUSTOM_CODE.DELETE.WARNING'|translate}}</b> {{'CUSTOM_CODE.DELETE.WARNING_TEXT'|translate}}</p>
+        <p><b>{{'STUDY.DELETE.WARNING'|translate}}</b> {{'STUDY.DELETE.WARNING_TEXT'|translate}}</p>
     </div>
     <div class="alert row">
         <div class="col-xs-12">
-            <p ng-bind-html="customCodeToDelete.code + ' - ' + customCodeToDelete.description"></p>
+            <p ng-bind-html="studyToDelete.code + ' - ' + studyToDelete.title"></p>
         </div>
     </div>
     <div class="row">
         <div class="modal-buttons col-xs-12">
-            <form method="post" ng-submit="deleteCustomCode()">
-                <input class="btn btn-primary submit" type="submit" value="{{'CUSTOM_CODE.DELETE.DELETE'|translate}}">
-                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'CUSTOM_CODE.DELETE.CANCEL'|translate}}">
+            <form method="post" ng-submit="deleteStudy()">
+                <input class="btn btn-primary submit" type="submit" value="{{'STUDY.DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'STUDY.DELETE.CANCEL'|translate}}">
             </form>
         </div>
     </div>
